--- a/src/components/nav-accordeon/nav-accord.scss
+++ b/src/components/nav-accordeon/nav-accord.scss
@@ -1,47 +1,37 @@
 .nav-accordeon {
-  $w: 80px;
-  $h: 500px;
-  width: 100%;
-  height: 290px;
+  $w: 100%;
+  $h: 300px;
+  width: $w;
+  height: $h;
   background: #fff;
   transform: translateZ(0);
   &:hover .nav-accordeon__container {
-    height: 20%;
+    height: 15%;
   }
   .nav-accordeon__container {
-    // position: relative;
-    // float: left;
     width: 100%;
-    height: 20%;
+    height: 15%;
     color: #aaa;
     border-bottom: 5px solid #ddd;
     border-left: 5px solid #555;
-    transition: .5s width;
+    transition: 0.5s height;
     overflow: hidden;
     cursor: pointer;
     &:hover {
-      height: 40%;
+      height: 50%;
       color: #555;
       border-left: 5px solid rgb(206, 4, 4);
     }
     .nav-accordeon__icon_small {
-      // position: absolute;
-      // top: 0;
-      // left: 0;
-      height: ($h/5);
-      line-height: 78px;
       text-align: center;
+      margin: 15px 0;
       font-family: fontawesome;
-      font-size: 24px;
+      font-size: 30px;
     }
     .nav-accordeon__icon_large {
-      // position: absolute;
-      // top: 22px;
-      // left: 100px;
       .nav-accordeon__link-title, .nav-accordeon__link-text {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 700;
-        white-space: nowrap;
       }
       .nav-accordeon__link-text {
         margin-top: 8px;
@@ -49,20 +39,13 @@
       }
     }
     .nav-accordeon__icon_preview {
-      // position: absolute;
-      // top: 0;
-      // left: 7px;
       font-family: fontawesome;
-      font-size: 12px;
-      line-height: 78px;
+      font-size: 15px;
+      margin-top: 11px;
       transition: .5s opacity;
-      opacity: 0;
     }
     &:hover .nav-accordeon__icon_preview {
       opacity: 0;
     }
-  }
-  &:hover .nav-accordeon__icon_preview {
-    opacity: 1;
   }
 }
