feature(KS-01): обновленный сайдбар меню

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,16 +1,17 @@
 .sidebar {
+  padding: 20px;
   background: #fff;
   box-shadow: 1px 0 0 #E0E0E0;
   width: 56px;
   position: fixed;
-  top: 65px;
+  top: 88px;
   left: 0;
   bottom: 0;
   transition: .2s ease-in-out;
 }
 
 .sidebar_collapsed {
-  width: 244px;
+  width: 300px;
 }
 
 .sidebar__collapse-btn {
